--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "gray-matter": "^4.0.3",
     "gsap": "^3.12.7",
     "motion": "^12.9.2",
-    "next": "15.3.0",
+    "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
