fix: stable build with Next.js 15.2.3 and clean dynamic route typing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,18 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@/lib/*": ["./src/lib/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/ProjectGrid/GridToggle"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/components/ProjectGrid/GridToggle"
+  ],
   "exclude": ["node_modules"]
 }
