✅ Fix global.d.ts JSX typing for Vercel build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,10 +26,11 @@
     ]
   },
   "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
+  "**/*.ts",
+  "**/*.tsx",
+  "next-env.d.ts",
+  ".next/types/**/*.ts",
+  "src/types/global.d.ts"
+],
   "exclude": ["node_modules"]
 }
