--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,9 @@
   "compilerOptions": {
     "target": "es2020",
     "lib": ["dom", "dom.iterable", "esnext"],
-    "jsx": "react-jsx",
-
+    "jsx": "react-jsx",                        // ✅ correction ici
     "module": "esnext",
-    "moduleResolution": "bundler", // pour Next.js 13+ avec App Router
+    "moduleResolution": "bundler",             // ✅ pour Next.js 13+ (app/)
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "allowJs": true,
@@ -15,22 +14,22 @@
     "noEmit": true,
     "isolatedModules": true,
     "incremental": true,
-
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
     },
-
     "plugins": [
-      { "name": "next" }
+      {
+        "name": "next"
+      }
     ]
   },
   "include": [
-  "**/*.ts",
-  "**/*.tsx",
-  "next-env.d.ts",
-  ".next/types/**/*.ts",
-  "src/types/global.d.ts"
-],
+    "**/*.ts",
+    "**/*.tsx",
+    "next-env.d.ts",
+    ".next/types/**/*.ts",
+    "src/types/global.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
