--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,14 @@
 {
   "compilerOptions": {
     "target": "es2020",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "jsx": "react-jsx",                        // ✅ correction ici
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "jsx": "preserve", // ✅ correction ici
     "module": "esnext",
-    "moduleResolution": "bundler",             // ✅ pour Next.js 13+ (app/)
+    "moduleResolution": "bundler", // ✅ pour Next.js 13+ (app/)
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "allowJs": true,
@@ -16,7 +20,9 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": [
+        "src/*"
+      ]
     },
     "plugins": [
       {
@@ -31,5 +37,7 @@
     ".next/types/**/*.ts",
     "src/types/global.d.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
